--- a/Code/static/styles.css
+++ b/Code/static/styles.css
@@ -1,6 +1,6 @@
 body {
   display: flex;
-  flex: column;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -13,6 +13,38 @@ body {
 
 blockquote::first-letter {
   text-transform: uppercase;
+}
+
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  border-radius: 20px;
+  background-color: #1DA1F2;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #0A91D0;
+}
+
+.button .icon {
+  display: inline-block;
+  vertical-align: middle;
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+  background-size: cover;
+}
+
+.button .text {
+  display: inline-block;
+  vertical-align: middle;
 }
 
 
